--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 	<title>Kasa</title>
 	<meta descritpion="Kasa, meilleure agence de location d'appartements entre particuliers depuis près de 10 ans !" />
-	
+	<script src="https://kit.fontawesome.com/ac612d1b0f.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 
